--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "mocha": "^2.4.5",
     "nodemon": "^1.17.1",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^1.15.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "npm": "^5.7.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
